# katpoint

./: .gitignore  .gitlab-ci.yml  .readthedocs.yml  CODEOWNERS  LICENSE.txt  MANIFEST.in  Makefile  NEWS.rst  README.rst  docker-requirements.txt  gitlab-ci-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  system-requirements.txt  test  test-requirements.txt  tox.ini
doc/: Makefile  api_changes.rst  conf.py
docs/src/: api_changes.rst  conf.py  index.rst  katpoint.rst
katpoint/: __init__.py  angle.py  antenna.py  bodies.py  body.py  catalogue.py  conversion.py  date.py  delay.py  delay_correction.py  delay_model.py  ephem_extra.py  flux.py  model.py  observer.py  pointing.py  projection.py  refraction.py  stars.py  target.py  timestamp.py
katpoint/ephem/: .__init__.py.swp  __init__.py  angle.py  body.py  constants.py  coordinates.py  date.py  observer.py  stars.py
katpoint/ephem/stars/: __init__.py
katpoint/ephem/test/: .test_coordinates.py.swp  __init__.py  test_angle.py  test_body.py  test_coordinates.py  test_observer.py  test_stars.py
katpoint/test/: __init__.py  conftest.py  helper.py  test_antenna.py  test_body.py  test_catalogue.py  test_conversion.py  test_delay.py  test_flux.py  test_model.py  test_observer.py  test_pointing.py  test_projection.py  test_refraction.py  test_stars.py  test_target.py  test_timestamp.py
katpoint/test/aips_projection/: build_module.sh
scripts/: atca_calibrators.py  bae_optical_pointing_sources.py  ephem_stars.edb  great_conjunction.py  kuehr1Jy_source_list.csv  kuehr1Jy_sources.py  merge_catalogues.py  pkscat90_sources.py  psrcat_sources.py  tabara_sources.py  validate_targets.py
src/katpoint/: __init__.py  antenna.py  body.py  catalogue.py  conversion.py  delay_correction.py  delay_model.py  flux.py  model.py  pointing.py  projection.py  refraction.py  target.py  timestamp.py
src/katpoint/troposphere/: __init__.py  delay.py  refraction.py
tests/: __init__.py  conftest.py  helper.py  test_antenna.py  test_body.py  test_catalogue.py  test_conversion.py  test_delay.py  test_flux.py  test_model.py  test_pointing.py  test_projection.py  test_refraction.py  test_target.py  test_timestamp.py  test_troposphere.py
tests/aips_projection/: build_module.sh
